tests/paczka2/big_fuzzy/57134859.err
Error in line 19: A374 A864 81,5
Error in line 51: CivgKeQZ A374 2,2
Error in line 58: FCBnc A335 79,0
Error in line 60: C2aSD S5 4,5
Error in line 63: q3H2QcGEXQ A374 94,3
Error in line 89: FCBnc S5 7,2
Error in line 71: NpsELqmVa4 A864 8,0
Error in line 94: A374 A335 76,2
Error in line 99: C¨aSD S5 63,4
Error in line 79: q3H2QcGEXQ A335 11,8
Error in line 102: C2aSD S5 308,8
Error in line 121: CivgKeQZ S5 36,6
Error in line 134: C2aSD A864 8,2
Error in line 140: C2aSD A374 41,0
Error in line 151: q3H2QcGEXQ A374 68,1
Error in line 152: C2aSD A864 81,4
Error in line 148: 2770B4X1x A864 27,1
Error in line 155: 2770B4X1x A374 42,7
Error in line 153: q3H2QcGEXQ S5 76,9
Error in line 160: C2aSD A374 99,9
Error in line 169: 2770B4X1x S5 23,1
Error in line 183: FCBnc S5 2,7
Error in line 188: NpsELqmVa4 S5 99,1
Error in line 191: NpsELqmVa4 A374 77,0
Error in line 192: NpsELqmVa4 A864 6,5
Error in line 196: FCBnc A335 118,77
Error in line 198: 2770B4X1x S5 82,3
Error in line 200: 2770B4X1x A864 76,6
Error in line 205: CivgKeQZ A335 77,3
Error in line 185: FCBnc A335 32,7
Error in line 215: C2aSD A335 71,1
Error in line 214: q3H2QcGEXQ A864 105,0
Error in line 217: C2aSD S5 90,7
Error in line 211: FCBnc S5 44,4
Error in line 227: CivgKeQZ A864 91,7
Error in line 231: CivgKeQZ A374 39,1
Error in line 242: 2770B4X1x A374 -1,13
Error in line 239: CivgKeQZ A864 5,3
Error in line 248: NpsELqmVa4 A864 49,9
